# birl_ur5_assembly_experiment

./: CMakeLists.txt  LICENCE  README.md  package.xml  setup.py
launch/: real_robot_chip_start.launch  real_robot_start.launch  sim_robot_chip_start.launch  sim_robot_start.launch
moveit_config/: fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  ur5.srdf
scripts/: covert_degree_to_rad.py  experiment_runner.py  explore_ur5_joints.py  get_ur_jointAngle.py  get_ur_pose.py  gripper_switch_server.py  profile_ur5.py  profile_ur5_manipulator_group.py  pythonify_profile_of_ur5_manipulator_group.py  setup_experiment_planning_scene.py  test_planning_scene.py  ur3_joint_angles.txt  ur_fixed_pick_and_place.py  ur_go_home.py  ur_go_preplace.py  ur_go_up.py  ur_move_angle.py
src/birl_ur5_assembly_experiment/: hardcoded_data.py  log  moveit_vars_getter.py  smach_FSM.py  temp.py
srv/: ur_gripper.srv
test/: moveit_tut1.py
